--- a/src/app/pages/pacientes/paciente.component.html
+++ b/src/app/pages/pacientes/paciente.component.html
@@ -3,7 +3,7 @@
     <mat-card-header *ngIf="paciente"  class="color-bck-pacientes p-1 bradius">
         <img mat-card-avatar [src]="paciente.img | imagen">
         <mat-card-title>{{ nombrePaciente }}</mat-card-title>
-        <mat-card-subtitle class="mt-1" *ngIf="!cargando">Actualizado el {{ paciente.actualizadoEl | date:'dd-MM-yyyy'}} por {{ actualizadoPor.nombre }} </mat-card-subtitle>
+        <!-- <mat-card-subtitle class="mt-1" *ngIf="!cargando">Actualizado el {{ paciente.actualizadoEl | date:'dd-MM-yyyy'}} por {{ actualizadoPor.nombre }} </mat-card-subtitle> -->
         <span class="toolbar-spacer"></span>
 
         <!-- HERRAMIENTAS -->
@@ -33,16 +33,18 @@
                     Constancia de tratamiento
                 </button>
             </mat-menu>
-            <button *ngIf="modo === 'ver'" mat-icon-button matTooltip="Editar" (click)="editarPaciente()">
+            
+            <a *ngIf="modo === 'view'" mat-icon-button matTooltip="Editar" [routerLink]="[ '/paciente/', paciente._id ]" [queryParams]="{action: 'edit'}">
                 <mat-icon aria-hidden="false" aria-label="Editar icon">
                     edit
                 </mat-icon>
-            </button>
-            <button *ngIf="modo === 'editar'" mat-icon-button matTooltip="Ver" (click)="verPaciente()">
+            </a>
+            <a *ngIf="modo === 'edit'" mat-icon-button matTooltip="Ver" [routerLink]="[ '/paciente/', paciente._id ]" [queryParams]="{action: 'view'}">
                 <mat-icon aria-hidden="false" aria-label="Ver icon">
                     remove_red_eye
                 </mat-icon>
-            </button>
+            </a>
+            
             <button mat-icon-button matTooltip="Informes">
                 <mat-icon class="toolbar-icon" aria-hidden="false" aria-label="Informes icon">
                     <i class="fas fa-file-prescription paciente-tab-icon"></i>
@@ -65,7 +67,7 @@
                     <mat-icon class="paciente-tab-icon">person</mat-icon>
                     Datos Principales
                 </ng-template>
-                <app-paciente-principal *ngIf="paciente" (imprimir)="imprimir($event)" [paciente]="paciente" [modo]="modo"></app-paciente-principal>
+                <app-paciente-principal *ngIf="paciente" (imprimir)="imprimir($event)" [paciente]="paciente"></app-paciente-principal>
             </mat-tab>
 
             <mat-tab>
