--- a/src/app/pages/turnos/turnos.component.html
+++ b/src/app/pages/turnos/turnos.component.html
@@ -32,12 +32,18 @@
                 keyboard_arrow_right
             </mat-icon>
           </button>
+          <mat-divider [vertical]="true" class="divider"></mat-divider>
           <button mat-mini-fab color="warn" (click)="nuevo()" class="ml-5px" matTooltip="Crear Turno">
             <mat-icon aria-hidden="false" aria-label="nuevo icon">
                 today
             </mat-icon>
           </button>
-
+          <mat-divider [vertical]="true" class="divider"></mat-divider>
+          <button mat-mini-fab color="default" (click)="imprimir()" class="ml-5px" matTooltip="Imprimir Turnos">
+            <mat-icon aria-hidden="false" aria-label="print icon">
+                print
+            </mat-icon>
+          </button>
         </mat-toolbar-row>
     </mat-toolbar>
 
@@ -51,14 +57,18 @@
               [id]="column.id">
             <mat-card>
                 <mat-card-header>
-                  <div class="col-4">
-                    <img mat-card-avatar [src]="column.head.img | imagen" class="card-img-turnos">
-                  </div>
-                  <div class="col-8">
-                    <mat-card-title *ngIf="column.head" class="card-title-turnos">
-                      {{ column.head.apellido }} {{ column.head.nombre }}
-                    </mat-card-title>
-                  </div>
+                  <mat-card-title *ngIf="column.head" class="card-title-turnos">
+                  <div class="row">
+                    <div class="col-4">
+                      <img mat-card-avatar [src]="column.head.img | imagen" class="card-img-turnos">
+                    </div>
+
+                    <div class="col-8">
+                        
+                        {{ column.head.apellido }} {{ column.head.nombre }}
+                      </div>
+                    </div>
+                  </mat-card-title>
                 </mat-card-header>
             </mat-card>
           </div>
