--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -371,10 +371,13 @@ footer {
 
 .turnos .mat-card-content{
     width: 100%;
+    height: 100%;
     padding: 2px;
     margin: 0;
-    display: block;
+    display: flex;
     box-sizing: border-box;
+    flex-direction: row;
+    font-size: .9em;
 }
 
 .mat-card-actions .menu-more{
@@ -451,7 +454,9 @@ footer {
     /* padding: 3px !important;
     border-top-left-radius: 4px !important;
     border-top-right-radius: 4px !important; */
-    height: 40px;
+    /* height: 40px; */
+    height: 20px;
+    background-color: #cacaca;
 }
 
 .turnos-header img {
@@ -470,10 +475,11 @@ footer {
 .mat-card-header .mat-card-title {
     /* margin: 0px !important; */
     /* width: 100%; */
+    font-size: .9em !important;
 }
 .mat-card-header-text {
     margin: 0 !important;
-    font-size: .9em;
+    width: 100%;
 }
 
 .mat-card-content p {
@@ -494,6 +500,15 @@ footer {
     height: 1px;
     width: 100%;
     box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
+}
+
+.divider {
+    background-color: #b9c59f;
+    height: 60%;
+    margin: 0 3px 0 8px !important;
+    -webkit-box-shadow: 3px 0px 5px 0px rgba(0, 24, 2, 0.9);
+    -moz-box-shadow: 3px 0px 5px 0px rgba(0, 24, 2, 0.9);
+    box-shadow: 3px 0px 5px 0px rgba(0, 24, 2, 0.9);
 }
 
 .turno-programado {
