Cambios en las interfaces

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -17,7 +17,7 @@
           </p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-raised-button (click)="crearNuevoPaciente()" class="color-bck-pacientes">
+          <button mat-raised-button (click)="crearNuevoPaciente()" class="color-bck-pacientes btn-block">
             Nuevo paciente
             <mat-icon class="toolbar-icon" aria-hidden="false" aria-label="Nuevo Paciente icon">person_add</mat-icon>
           </button>
@@ -39,7 +39,7 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
-          <button mat-raised-button (click)="crearNuevoProfesional()" class="color-bck-profesionales">
+          <button mat-raised-button (click)="crearNuevoProfesional()" class="color-bck-profesionales btn-block">
               Nuevo profesional
                 <mat-icon class="toolbar-icon" aria-hidden="false" aria-label="Nuevo Paciente icon">person_add</mat-icon>
             </button>
@@ -61,7 +61,7 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
-          <button mat-raised-button (click)="crearNuevoTurno()" class="color-bck-turnos">
+          <button mat-raised-button (click)="crearNuevoTurno()" class="color-bck-turnos btn-block">
               Nuevo turno
               <mat-icon class="toolbar-icon" aria-hidden="false" aria-label="Nuevo turno icon">
                 today
@@ -85,7 +85,7 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
-          <button mat-raised-button (click)="crearNuevaArea()" class="color-bck-areas">
+          <button mat-raised-button (click)="crearNuevaArea()" class="color-bck-areas btn-block">
             Nueva Area
             <mat-icon class="toolbar-icon" aria-hidden="false" aria-label="Nueva area icon">
                 business_center
@@ -98,4 +98,4 @@
 
 </mat-card-content>
 
-<app-pacientes></app-pacientes>
+<!-- <app-pacientes></app-pacientes> -->
