--- a/src/app/pages/personal/empleado.component.html
+++ b/src/app/pages/personal/empleado.component.html
@@ -1,8 +1,8 @@
 <mat-card class="example-card">
 
     <mat-card-header *ngIf="empleado" class="color-bck-profesionales bradius p-1">
-        <img mat-card-avatar [src]="empleado.img | imagen">
-        <mat-card-title *ngIf="empleado">{{ empleado.getNombreCompleto() }}</mat-card-title>
+        <img mat-card-avatar [src]="empleado.img | imagen" class="color-bck-avatar">
+        <mat-card-title *ngIf="empleado">{{ empleado.apellido }}, {{ empleado.nombre }}</mat-card-title>
         <mat-card-subtitle *ngIf="!cargando">Actualizado el {{ empleado.actualizadoEl | date:'dd-MM-yyyy'}} por {{ actualizadoPor.nombre }} </mat-card-subtitle>
         <span class="toolbar-spacer"></span>
 
