--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -145,6 +145,15 @@ footer {
     color: white !important;
 }
 
+.color-bck-avatar {
+    background-color: white;
+}
+
+/* BOTONES */
+.btn-block {
+    width: 100%;
+}
+
 /* CARDS */
 .icon-title-card {
     vertical-align: bottom;
@@ -472,13 +481,17 @@ footer {
     overflow: hidden;
     width: 100%;
 }
-.mat-card-header .mat-card-title {
+/* .mat-card-header .mat-card-title { */
     /* margin: 0px !important; */
     /* width: 100%; */
+    
+/* } */
+.mat-card-header .mat-card-title-turno {
     font-size: .9em !important;
 }
+
 .mat-card-header-text {
-    margin: 0 !important;
+    /* margin: 0 !important; */
     width: 100%;
 }
 
@@ -560,10 +573,46 @@ footer {
 }
 
 @media screen and (max-width:768px) {
+    .dashboard {
+        width: 100%;
+        display: flex !important;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .dashboard-card {
+        width: 100%;
+        height: 100%;
+        flex-shrink: 0;
+    }
 }
 
 @media screen and (max-width:480px) {
+    .dashboard {
+        width: 100%;
+        display: flex !important;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .dashboard-card {
+        width: 100%;
+        height: 100%;
+        flex-shrink: 0;
+    }
 }
 
 @media screen and (max-width:320px) {
+    .dashboard {
+        width: 100%;
+        display: flex !important;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .dashboard-card {
+        width: 100%;
+        height: 100%;
+        flex-shrink: 0;
+    }
 }
