Toolbar turnos modificado

--- a/src/app/pages/turnos/card-turno.component.html
+++ b/src/app/pages/turnos/card-turno.component.html
@@ -17,7 +17,7 @@
   <mat-card-content *ngIf="turno.paciente" [ngClass]="turno.estilo">
     <div class="row">
 
-      <div class="col-4">
+      <div class="col-turno-avatar">
         <img mat-card-avatar [src]="turno.paciente.img | imagen" class="card-img-turnos">
       </div>
 
