--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -42,7 +42,9 @@ footer {
 .col-12 {
     width: 100%;
 }
-
+.col-9 {
+    width: 75%;
+}
 .col-8 {
     width: 66.66666667%;
 }
@@ -326,6 +328,9 @@ footer {
     font-size: 14px;
     width: 100%;
 }
+.col-turno-avatar {
+    width: 33.33333333%;
+}
 .toolbar-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -347,12 +352,28 @@ footer {
     font-size: 13px !important;
 }
 
+.toolbar-turnos {
+    display: grid !important;
+    grid-template-columns: repeat(2, 1fr);
+    height: 100%;
+    width: 100%;
+}
+
+.toolbar-turnos-title {
+    width: 100%;
+}
+
+.toolbar-turnos-tools {
+    width: 100%;
+}
+
 .turnos {
     margin-top: 10px !important;
     font-size: 0.9em !important;
     width: 100%;
     height: 1000px;
 }
+
 .turnos .ng-star-inserted {
     width: inherit;
 }
@@ -481,11 +502,11 @@ footer {
     overflow: hidden;
     width: 100%;
 }
-/* .mat-card-header .mat-card-title { */
+.mat-card-header .mat-card-title {
     /* margin: 0px !important; */
-    /* width: 100%; */
+    width: 100%;
     
-/* } */
+}
 .mat-card-header .mat-card-title-turno {
     font-size: .9em !important;
 }
@@ -588,6 +609,9 @@ footer {
 }
 
 @media screen and (max-width:480px) {
+    .mat-toolbar-row, .mat-toolbar-single-row {
+        box-sizing: border-box !important;
+    }
     .dashboard {
         width: 100%;
         display: flex !important;
@@ -599,6 +623,21 @@ footer {
         width: 100%;
         height: 100%;
         flex-shrink: 0;
+    }
+
+    .toolbar-turnos {
+        display: grid !important;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        height: 100% !important;
+    }
+
+    .card-img-turnos {
+        display: none;
+    }
+
+    .col-turno-avatar {
+        display: none;
     }
 }
 
@@ -614,5 +653,20 @@ footer {
         width: 100%;
         height: 100%;
         flex-shrink: 0;
+    }
+
+    .toolbar-turnos {
+        display: grid !important;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        height: 100% !important;
+    }
+
+    .card-img-turnos {
+        display: none;
+    }
+
+    .col-turno-avatar {
+        display: none;
     }
 }
