--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -352,156 +352,11 @@ footer {
     font-size: 13px !important;
 }
 
-.toolbar-turnos {
-    display: grid !important;
-    grid-template-columns: repeat(2, 1fr);
-    height: 100%;
-    width: 100%;
-}
-
-.toolbar-turnos-title {
-    width: 100%;
-}
-
-.toolbar-turnos-tools {
-    width: 100%;
-}
-
-.turnos {
-    margin-top: 10px !important;
-    font-size: 0.9em !important;
-    width: 100%;
-    height: 1000px;
-}
-
-.turnos .ng-star-inserted {
-    width: inherit;
-}
-.turnos app-card-turno {
-    width: inherit;
-}
-
-.encabezado-turnos {
-    display: flex;
-    height: 50px;
-    margin-bottom: 2px;
-}
-
-.detalle-turnos {
-    display: flex;
-    height: 100vh;
-    background-color: #fafafa;
-}
-.turnos .mat-card-actions {
-    padding: 0px !important;
-    /* margin-left: -15px !important; */
-    position: absolute;
-    bottom: 9px;
-}
-
-.turnos .mat-card-content{
-    width: 100%;
-    height: 100%;
-    padding: 2px;
-    margin: 0;
-    display: flex;
-    box-sizing: border-box;
-    flex-direction: row;
-    font-size: .9em;
-}
-
 .mat-card-actions .menu-more{
     height: 30px;
     bottom: 5px;
 }
 
-.turnos-header .menu-turno {
-    min-width: 10px;
-    margin: 0;
-    padding: 0;
-}
-
-.menu-turno {
-    width: 10px;
-    overflow: hidden;
-}
-
-.menu-turno span {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box; 
-  }
-
-.menu-turno span mat-icon {
-    margin: 0;
-    padding: 0;
-    left: -5px;
-    position: relative;
-    box-sizing: border-box;
-    width: 10px;
-}
-
-.turno-column {
-    border: .5px solid #ddd;
-    padding: 0;
-    height: 1000px ;
-}
-
-.turno-column-encabezado {
-    height: 50px;
-}
-
-.turno-column-encabezado mat-card{
-    background-color: #320b86;
-    color: #ffffff;
-    text-align: center;
-    font-weight: 500;
-    padding: 1px;
-    height: 50px;
-}
-
-.turno-column-head {
-    width: 100%;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-}
-
-.turno-column-data {
-    text-align: center;
-    width: 100%;
-    min-height: 50px;
-    display: flex;
-    justify-content: center;
-}
-
-.mat-card-turnos {
-    padding: 0px !important;
-    margin-top: 1px;
-}
-
-.turnos-header {
-    /* padding: 3px !important;
-    border-top-left-radius: 4px !important;
-    border-top-right-radius: 4px !important; */
-    /* height: 40px; */
-    height: 20px;
-    background-color: #cacaca;
-}
-
-.turnos-header img {
-    margin: 0;
-    padding: 0;
-}
-
-.card-title-turnos {
-    font-size: .9em !important;
-    padding: 0px;
-    font-weight: 600;
-    display: block !important;
-    overflow: hidden;
-    width: 100%;
-}
 .mat-card-header .mat-card-title {
     /* margin: 0px !important; */
     width: 100%;
@@ -521,21 +376,6 @@ footer {
     margin: 0px;
 }
 
-.card-img-turnos {
-    width: 30px !important;
-    height: 30px !important;
-    align-self: center;
-}
-
-.separador-turnos {
-    position: relative;
-    top: 500px;
-    background-color: #320b86;
-    height: 1px;
-    width: 100%;
-    box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
-}
-
 .divider {
     background-color: #b9c59f;
     height: 60%;
@@ -543,32 +383,6 @@ footer {
     -webkit-box-shadow: 3px 0px 5px 0px rgba(0, 24, 2, 0.9);
     -moz-box-shadow: 3px 0px 5px 0px rgba(0, 24, 2, 0.9);
     box-shadow: 3px 0px 5px 0px rgba(0, 24, 2, 0.9);
-}
-
-.turno-programado {
-   background-color: #673ab7 !important;
-   color: #ffffff;
-}
-
-.turno-reprogramado {
-    background-color: #AED6F1 !important;
-}
-
-.turno-demorado {
-    background-color: #c8a600 !important;
-}
-
-.turno-cancelo-paciente {
-    background-color: #ffd740 !important;
-}
-
-.turno-cancelo-profesional {
-    background-color: #ffff74 !important;
-}
-
-.turno-realizado {
-    background-color: #320b86 !important;
-    color: #ffffff;
 }
 
 .text-muted {
@@ -582,6 +396,126 @@ footer {
 .pointer {
     cursor: pointer;
 }
+
+/* =================== TURNOS ===================== */
+#turnos {
+    width: 100%;
+    background-color: #AAAAAA;
+    height: 1000px;
+    font-size: 0.9em !important;
+    display: flex;
+    /* flex-wrap: wrap;
+    justify-content: space-around; */
+}
+
+.toolbar-turnos-title {
+    width: 50%;
+    float: left;
+}
+
+.toolbar-turnos-tools {
+    display: flex;
+    justify-content: space-around;
+}
+
+.turno-column {
+    border: .5px solid #ddd;
+    padding: 0;
+    background-color: #ffffff;
+    height: 100%;
+    /* Para que mantenga el ancho */
+    flex-shrink: 0;
+    box-sizing: border-box;
+}
+
+.turnos-card {
+    background-color: #320b86;
+    height: 50px;
+}
+
+.turnos-card-prof {
+    color: #ffffff;
+}
+
+.turnos-card-pac {
+    color: #ffffff;
+    width: 100%;
+}
+
+.turnos-card-pac-title {
+    background-color: #dddddd;
+    color: #000000;
+    max-height: 20px;
+}
+
+.turnos-card-pac-content {
+    padding: 1px;
+    box-sizing: border-box;
+}
+
+.turnos-card-pac-content-menu {
+    box-sizing: content-box;
+}
+
+.turnos-thunb {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+    background-color: #ffffff;
+}
+
+.turnos-thunb-pac {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    object-fit: cover;
+    background-color: #ffffff;
+}
+
+.turnos-detalle {
+    position: absolute;
+    width: inherit;
+    /* width: 100%; */
+    height: 1200px;
+}
+
+.turno-programado {
+    background-color: #673ab7 !important;
+    color: #ffffff;
+ }
+
+ .turno-reprogramado {
+    background-color: #AED6F1 !important;
+    color: #000000;
+}
+
+.turno-demorado {
+    background-color: #c8a600 !important;
+    color: #000000;
+}
+
+.turno-cancelo-paciente {
+    background-color: #ffd740 !important;
+    color: #000000;
+}
+
+.turno-cancelo-profesional {
+    background-color: #ffff74 !important;
+    color: #000000;
+}
+
+.turno-realizado {
+    background-color: #320b86 !important;
+    color: #ffffff;
+}
+
+.turno-paciente-esperando {
+    background-color: #ffffff;
+    color: #000000;
+}
+
+
 /* CAJAS */
 .box-flex {
     display: flex;
@@ -606,6 +540,18 @@ footer {
         height: 100%;
         flex-shrink: 0;
     }
+
+    #turnos {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    .turno-column {
+        width: 50% !important;
+    }
+
 }
 
 @media screen and (max-width:480px) {
@@ -625,19 +571,17 @@ footer {
         flex-shrink: 0;
     }
 
-    .toolbar-turnos {
-        display: grid !important;
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        height: 100% !important;
+    #turnos {
+        display: flex;
+        /* flex-direction: column; */
     }
 
-    .card-img-turnos {
-        display: none;
+    .turno-column {
+        /* width: 100% !important; */
     }
 
-    .col-turno-avatar {
-        display: none;
+    app-card-turno {
+        width: 100% !important;
     }
 }
 
@@ -655,18 +599,12 @@ footer {
         flex-shrink: 0;
     }
 
-    .toolbar-turnos {
-        display: grid !important;
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        height: 100% !important;
+    #turnos {
+        display: flex;
+        flex-direction: column;
     }
 
-    .card-img-turnos {
-        display: none;
-    }
-
-    .col-turno-avatar {
-        display: none;
+    .turno-column {
+        /* width: 100% !important; */
     }
 }
